--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,22 @@
   padding-right:0;
 }
 
+@font-face {
+  font-family: 'Gotham-Black';
+  src: url('../public/fonts/Gotham-Black.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'Gotham-Bold';
+  src: url('../public/fonts/GothamBold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Gotham-Light';
+  src: url('../public/fonts/GothamLight.ttf') format('truetype');
+}
+
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -78,6 +94,7 @@
   font-weight: bold;
   margin-top: 10px;
   font-size: 16px;
+  font-family: 'Gotham-Bold', sans-serif;
 }
 
 img {
@@ -100,30 +117,40 @@ img {
   padding: 1rem;
   box-sizing: border-box;
   z-index: 9999;
+  opacity: 0;
+  transform: translateY(-100%);
+  animation: slideFromTop 0.5s ease forwards;
 }
 
 .logo {
 
-  align-items: center;
+  align-items: left;
   color: white;
   margin-left: 2rem;
-  max-width: 30%; /* adjust this value as needed */
+
 }
 
+
 .logo img {
-  height: auto;
+  height: 2rem;
   max-height: 2rem; /* adjust this value as needed */
   margin-right: 0.5rem;
 }
 
 
 .logoh2{
-  width:1%;
+  font-family: 'Gotham-Light', sans-serif;
+  width:11rem;
   color:white;
-  flex:1;
-  padding-left:2rem;
+  margin-right:auto;
+  margin-left:2rem;
+  cursor:pointer;
+  transition: transform 0.3s ease;
 }
 
+.logoh2:hover{
+  transform: translateX(-10px);
+}
 
 .search-bar {
   position: fixed;
@@ -213,6 +240,8 @@ img {
   height:15rem;
 }
 
+
+
 .popup-text{
   color:#e1e1e1;
   padding-left:3rem;
@@ -220,19 +249,29 @@ img {
 .popup-title {
   font-size: 3rem;
   font-weight: bold;
-  margin-bottom: 20px;
+  margin-bottom: 1rem;
+  font-family: 'Gotham-Bold', sans-serif;
 }
 
 .popup-content {
   font-size: 1.5rem;
   font-weight: bold;
   margin-bottom: 20px;
+  font-family: 'Gotham-Light', sans-serif;
+}
+
+.popup-artist {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+  font-family: 'Gotham-Light', sans-serif;
 }
 
 .track-name, .track-number, .track-duration, .track-artists{
   color:white;
   font-size:1rem;
 }
+
 
 .popup-info{
   position:relative;
@@ -253,7 +292,7 @@ button {
   font-size: 18px;
 }
 
-button:hover {
+button:hover, .on:hover  {
   background-color: #0062cc;
 }
 
@@ -303,6 +342,7 @@ button:hover {
   top: 1.5rem;
   left: 2.5rem;
   z-index: 10;
+  display:flex;
 }
 
 .round-button {
@@ -331,6 +371,10 @@ button:hover {
   font-size: 20px;
 }
 
+.pause-button{
+  margin-left:0.5rem;
+}
+
 
 
 @keyframes App-logo-spin {
@@ -339,6 +383,17 @@ button:hover {
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes slideFromTop {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 
